# block_syncer

./: Cargo.toml  address.txt  config.toml
btc/: Cargo.toml
btc/examples/: handshake.rs
src/: btc_peer.rs  lib.rs  main.rs  peer.rs
sv/src/messages/: block_header.rs  message_header.rs  tx.rs
sv/src/script/: mod.rs
