[package]
name = "bsv"
version = "0.1.0"
authors = ["hustxiaoc <308512341@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={ version="0.2.13", features=["full"] }
byteorder="1.3.4"
sv = "0.1"
cryptoxide="0.2.0"
