[package]
name = "bsv"
version = "0.1.0"
authors = ["hustxiaoc <308512341@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={ version="0.2.20", features=["full"] }
byteorder="1.3.4"
sv = {path="./sv"}
cryptoxide="0.2.0"
tokio-byteorder="0.2"
dns-lookup="1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
reqwest={ version="0.10", features= ["json"]}
log4rs="0.12"
log = "0.4"
lru="0.6.5"

[dependencies.redis]
version = "*"